fixed images skewing on mobile

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -207,10 +207,7 @@ body {
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
-    width: auto;
-    height: max-content;
+    object-fit: contain;
     overflow: hidden;
 }
 
